@@ -31,6 +31,7 @@ class StartClient(FSAction):
     """
 
     NAME = 'mount'
+    NEEDED_MODULES = ['lustre']
 
     def _already_done(self):
         """Return a Result object if the client is already mounted."""
